--- a/src/app/Admin/components/categorias/categorias.component.html
+++ b/src/app/Admin/components/categorias/categorias.component.html
@@ -1,14 +1,58 @@
-<h2>Categorías</h2>
-<ul>
-    <li *ngFor="let categoria of categorias">{{ categoria.nombre }} ({{ categoria.tipo }}) <button (click)="llenarFormulario(categoria)">Editar</button> <button (click)="eliminar(categoria)">Eliminar</button></li>
-</ul>
+<h2 class="section-title">📁 Categorías</h2>
 
-<h3>Agregar Categoria</h3>
-<input type="hidden" [(ngModel)]="id"  />
-<input [(ngModel)]="nombre" placeholder="Nombre Cotegoria" />
-<select [(ngModel)]="tipo">
-    <option value="ingreso">Ingreso</option>
-    <option value="gasto">Gasto</option>
-  </select>
-  
-<button (click)="agregarCategoria()">Añadir Categoría</button>
+<mat-card class="form-card">
+  <h3>Agregar Categoría</h3>
+
+  <input type="hidden" [(ngModel)]="id" />
+
+  <mat-form-field appearance="outline" class="full-width">
+    <mat-label>Nombre Categoría</mat-label>
+    <input matInput [(ngModel)]="nombre" />
+  </mat-form-field>
+
+  <mat-form-field appearance="outline" class="full-width">
+    <mat-label>Tipo</mat-label>
+    <mat-select [(ngModel)]="tipo">
+      <mat-option value="ingreso">Ingreso</mat-option>
+      <mat-option value="gasto">Gasto</mat-option>
+    </mat-select>
+  </mat-form-field>
+
+  <button mat-raised-button color="primary" (click)="agregarCategoria()">Añadir Categoría</button>
+</mat-card>
+
+<mat-divider class="my-divider"></mat-divider>
+
+<mat-card>
+  <table mat-table [dataSource]="categorias" class="mat-elevation-z4 full-width-table">
+
+    <!-- Nombre -->
+    <ng-container matColumnDef="nombre">
+      <th mat-header-cell *matHeaderCellDef> Nombre </th>
+      <td mat-cell *matCellDef="let cat"> {{ cat.nombre }} </td>
+    </ng-container>
+
+    <!-- Tipo -->
+    <ng-container matColumnDef="tipo">
+      <th mat-header-cell *matHeaderCellDef> Tipo </th>
+      <td mat-cell *matCellDef="let cat"> {{ cat.tipo }} </td>
+    </ng-container>
+
+    <!-- Acciones -->
+    <ng-container matColumnDef="acciones">
+      <th mat-header-cell *matHeaderCellDef> Acciones </th>
+      <td mat-cell *matCellDef="let cat">
+        <button mat-icon-button color="accent" (click)="llenarFormulario(cat)">
+          <mat-icon>edit</mat-icon>
+        </button>
+        <button mat-icon-button color="warn" (click)="eliminar(cat)">
+          <mat-icon>delete</mat-icon>
+        </button>
+      </td>
+    </ng-container>
+
+    <!-- Header y Rows -->
+    <tr mat-header-row *matHeaderRowDef="columnas"></tr>
+    <tr mat-row *matRowDef="let row; columns: columnas;"></tr>
+  </table>
+</mat-card>
