--- a/src/app/Admin/components/categorias/categorias.component.css
+++ b/src/app/Admin/components/categorias/categorias.component.css
@@ -32,3 +32,13 @@
     margin-right: 8px;
   }
   
+
+  .container{
+    margin: 20px 25% 20px 25%;
+  }
+
+  @media (max-width: 600px) {
+    .container{
+      margin: 20px 5% 20px 5%;
+    }
+  }
