--- a/src/app/Admin/components/categorias/categorias.component.html
+++ b/src/app/Admin/components/categorias/categorias.component.html
@@ -1,58 +1,62 @@
-<h2 class="section-title">📁 Categorías</h2>
+<div class="container">
+  <h2 class="section-title"><mat-icon>folder</mat-icon> Categorías</h2>
 
-<mat-card class="form-card">
-  <h3>Agregar Categoría</h3>
+  <mat-card class="form-card">
+    <input type="hidden" [(ngModel)]="id" />
+    <br>
+    <mat-form-field appearance="outline" class="full-width">
+      <mat-label>Nombre Categoría</mat-label>
+      <input matInput [(ngModel)]="nombre" id="nombreCategoria"/>
+    </mat-form-field>
 
-  <input type="hidden" [(ngModel)]="id" />
+    <mat-form-field appearance="outline" class="full-width">
+      <mat-label>Tipo</mat-label>
+      <mat-select [(ngModel)]="tipo">
+        <mat-option value="ingreso">Ingreso</mat-option>
+        <mat-option value="gasto">Gasto</mat-option>
+      </mat-select>
+    </mat-form-field>
 
-  <mat-form-field appearance="outline" class="full-width">
-    <mat-label>Nombre Categoría</mat-label>
-    <input matInput [(ngModel)]="nombre" />
-  </mat-form-field>
+    <button mat-flat-button color="primary" (click)="agregarCategoria()">{{textButton}}</button>
+  </mat-card>
 
-  <mat-form-field appearance="outline" class="full-width">
-    <mat-label>Tipo</mat-label>
-    <mat-select [(ngModel)]="tipo">
-      <mat-option value="ingreso">Ingreso</mat-option>
-      <mat-option value="gasto">Gasto</mat-option>
-    </mat-select>
-  </mat-form-field>
+  <mat-divider class="my-divider"></mat-divider>
+  <div class="mat-elevation-z8">
+    <table mat-table [dataSource]="categorias" class="mat-elevation-z8 demo-table">
+      
+       <!-- Nombre -->
+       <ng-container matColumnDef="nombre">
+        <th mat-header-cell *matHeaderCellDef> Nombre </th>
+        <td mat-cell *matCellDef="let cat"> {{ cat.nombre }} </td>
+      </ng-container>
 
-  <button mat-raised-button color="primary" (click)="agregarCategoria()">Añadir Categoría</button>
-</mat-card>
+      <!-- Tipo -->
+      <ng-container matColumnDef="tipo">
+        <th mat-header-cell *matHeaderCellDef> Tipo </th>
+        <td mat-cell *matCellDef="let cat"> {{ cat.tipo }} </td>
+      </ng-container>
 
-<mat-divider class="my-divider"></mat-divider>
-
-<mat-card>
-  <table mat-table [dataSource]="categorias" class="mat-elevation-z4 full-width-table">
-
-    <!-- Nombre -->
-    <ng-container matColumnDef="nombre">
-      <th mat-header-cell *matHeaderCellDef> Nombre </th>
-      <td mat-cell *matCellDef="let cat"> {{ cat.nombre }} </td>
-    </ng-container>
-
-    <!-- Tipo -->
-    <ng-container matColumnDef="tipo">
-      <th mat-header-cell *matHeaderCellDef> Tipo </th>
-      <td mat-cell *matCellDef="let cat"> {{ cat.tipo }} </td>
-    </ng-container>
-
-    <!-- Acciones -->
-    <ng-container matColumnDef="acciones">
-      <th mat-header-cell *matHeaderCellDef> Acciones </th>
-      <td mat-cell *matCellDef="let cat">
-        <button mat-icon-button color="accent" (click)="llenarFormulario(cat)">
-          <mat-icon>edit</mat-icon>
-        </button>
-        <button mat-icon-button color="warn" (click)="eliminar(cat)">
-          <mat-icon>delete</mat-icon>
-        </button>
-      </td>
-    </ng-container>
-
-    <!-- Header y Rows -->
-    <tr mat-header-row *matHeaderRowDef="columnas"></tr>
-    <tr mat-row *matRowDef="let row; columns: columnas;"></tr>
-  </table>
-</mat-card>
+       <!-- Acciones -->
+       <ng-container matColumnDef="acciones">
+        <th mat-header-cell *matHeaderCellDef> Acciones </th>
+        <td mat-cell *matCellDef="let cat">
+          <button mat-button color="accent" (click)="llenarFormulario(cat)">
+            <mat-icon>edit</mat-icon>
+          </button>
+          <button mat-button color="warn" (click)="eliminar(cat)">
+            <mat-icon>delete</mat-icon>
+          </button>
+        </td>
+      </ng-container>
+  
+      <tr mat-header-row *matHeaderRowDef="columnas"></tr>
+      <tr mat-row *matRowDef="let row; columns: columnas;"></tr>
+    </table>
+  
+    <mat-paginator [pageSizeOptions]="[5, 10, 20]"
+                   showFirstLastButtons
+                   aria-label="Select page of periodic elements">
+    </mat-paginator>
+  </div>
+  
+</div>
